--- a/src/css/scss/index.scss
+++ b/src/css/scss/index.scss
@@ -3,8 +3,8 @@
   --easing: cubic-bezier(0.5, 0.7, 0.4, 1);
 }
 body {
-  --page-background: #404046;
-  background-color: var(--page-background);
+  // --page-background: #404046;
+  // background-color: var(--page-background);
 }
 // @import ur;
 // // 1. Configuration and helpers
