--- a/src/css/scss/pages/_home.scss
+++ b/src/css/scss/pages/_home.scss
@@ -65,7 +65,7 @@ h2 {
   display: flex;
   color: #333;
   text-align: left;
-  border-right: 1px solid #f00;
+  // border-right: 1px solid #f00;
 }
 #panels #panels-container .panel img {
   max-width: 100%;
@@ -94,5 +94,55 @@ h2 {
   right: 2rem;
 }
 .site-header{
-  background-color: red;
+  // background-color: red;
+}
+
+.main-img{
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  top:0;
+}
+.positon-rel{
+  position: relative;
+  top: 0;
+  left: 0;
+}
+.position-abs{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  z-index: 1;
+  p, h1{
+    color: #fff;
+    text-align: center;
+  }
+  p{
+    font-size: 50px;
+    font-weight: 600;
+    margin: 0;
+    line-height: 1;
+  }
+  h1{
+    font-size: 100px;
+    margin: 0;
+    // line-height: 1;
+    position: relative;
+    overflow: hidden;
+  }
+  h1 > div {
+    position: relative;
+    margin: 0;
+  }
+  .split-parent {
+    overflow: hidden;
+  }
+  .split-child {
+    display: inline-block;
+  }
+  .text-heading {
+    width: 900px;
+  }
 }
