--- a/src/css/scss/pages/_home.scss
+++ b/src/css/scss/pages/_home.scss
@@ -34,13 +34,17 @@ h2 {
 
 #masthead {
   position: fixed;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  z-index: 9999;
+  // display: -webkit-box;
+  // display: -ms-flexbox;
+  // display: flex;
+  z-index: 9999;  
+  width: calc(100% - 140px);
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 60px 0;
 }
 #masthead a {
-  padding: 1rem 2rem;
+  // padding: 1rem 2rem;
 }
 
 
