Enquiry form added in enquire popup. modified files are: src/css/scss/abstracts/_variables.scss, src/css/scss/layout/_header.scss, src/index.html, src/js/app.js, src/img/down-arrow.png

--- a/src/css/scss/abstracts/_variables.scss
+++ b/src/css/scss/abstracts/_variables.scss
@@ -73,4 +73,6 @@ $base-url: '/img' !default;
 // custome
 // ============================
 $white: #ffffff;
+$black: #000000;
+$red: #ff0000;
 $base: 0.3rem;
