--- a/src/css/scss-praful/base/_fonts.scss
+++ b/src/css/scss-praful/base/_fonts.scss
@@ -2,6 +2,4 @@
 // This file contains all @font-face declarations, if any.
 // -----------------------------------------------------------------------------
 // @import url('https://fonts.googleapis.com/css2?family=Aclonica&family=Oswald:wght@600&family=Poppins:wght@500;600;700;800;900&display=swap');
-// @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap');
-@import url('http://fonts.cdnfonts.com/css/gotham');
-                
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap');
