--- a/src/css/scss/pages/_home.scss
+++ b/src/css/scss/pages/_home.scss
@@ -10,37 +10,69 @@ body {
   overflow-x: hidden;
 }
 
-a {
-  color: white;
-}
-
-h1,
-h2 {
-  text-align: center;
-}
-
 .full-screen {
   display: block;
   width: 100%;
   height: 100vh;
   overflow: hidden;
+  will-change: opacity; 
 }
 
-#intro {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
+// #intro {
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+// }
 
 #masthead {
   position: fixed;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  z-index: 9999;
+  z-index: 9999;  
+  width: calc(100% - 140px);
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 60px 0;
 }
-#masthead a {
-  padding: 1rem 2rem;
+
+.bottom-container{
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  z-index: 9999;
+  bottom: 0;
+  right: 0;
+  padding: 3% 5%;
+  width: 100%;
+  .progerss-input{
+    width: 60%;
+  }
+  progress {
+    border: none;
+    width: 100%;
+    height: 2px;
+    background: crimson;
+  }
+  
+  progress {
+    color: lightblue;
+  }
+  
+  progress::-moz-progress-bar {
+    background: lightcolor;
+  }
+  
+  progress::-webkit-progress-value {
+    background: red;
+  }
+  
+  progress::-webkit-progress-bar {
+    background: #fff;
+  }
 }
 
 
@@ -93,8 +125,16 @@ h2 {
   bottom: 2rem;
   right: 2rem;
 }
-// .site-header{
+.site-header{
+  .di-flex{
+    justify-content: space-between;
+    width: 100%;
+  }
+}
 //   // background-color: red;
+//   padding: 48px;
+//   justify-content: space-between;
+//   width: 100%;
 // }
 
 .main-img{
@@ -115,9 +155,12 @@ h2 {
   left: 50%;
   transform: translate(-50%,-50%);
   z-index: 1;
+  max-width: 1200px;
+  transform-origin: center;
+
   p, h1{
     color: #fff;
-    text-align: center;
+    // text-align: center;
   }
   p{
     font-size: 50px;
@@ -149,24 +192,49 @@ h2 {
   //   // animation-duration: 1s;
   // }
   .anim2{
-    overflow: hidden;
+    overflow-y: hidden;
     // line-height: 1;
     position: relative;
     span{
       display: inline-block;
       transform: translateY(100%);
+      font-size: 50px;
+      line-height: 1;
+      text-transform: uppercase;
+      color: #ffffff;
+      font-style: italic;
+      font-family: "Gotham Ultra";
+      padding-left: 36px;
     }
   } 
   h1 {
-    font-size: 100px;
-    color: #ffffff;
-    font-weight: 800;
+    // font-size: 100px;
+    // color: #ffffff;
+    // font-weight: 800;
     overflow: hidden;
+    // overflow-x: visible;
     // line-height: 1;
     position: relative;
+    text-align: right;
     span {
       display: inline-block;
       transform: translateY(-100%);
+      background-image: linear-gradient(-90deg, #12d6df 0%, #12d6df 36%, #f70fff 57%, #f70fff 100%);
+      -webkit-background-clip: text;
+      background-clip: text;
+	    -webkit-text-fill-color: transparent;
+      font-size: 100px;
+      letter-spacing: 2px;
+      line-height: 1;
+      text-transform: uppercase;
+      color: #ff0000;
+      font-style: italic;
+      font-family: "Gotham Ultra";
+      font-weight: bold;
+      padding: 0 12px;
+
+    // overflow-x: visible;
+
       // white-space: nowrap;
       // rotate(-10deg)
       // transform: rotate(5deg);
@@ -182,6 +250,231 @@ h2 {
     // }
   }
   .border{
-    border-bottom: 2px solid #fff;
+    font-size: 52px;
+    letter-spacing: 2px;
+    line-height: 1;
+    text-transform: uppercase;
+    color: #ffffff;
+    font-style: italic;
+    font-family: "Gotham";
+    position: relative;
+    // z-index: -99;
+    text-align: right;
+    span {
+      display: inline-block;
+      vertical-align: baseline;
+      zoom: 1;
+      *display: inline;
+      *vertical-align: auto;
+      position: relative;
+      padding: 0 20px;
+
+      &:before, &:after {
+          content: '';
+          display: block;
+          width: 1000px;
+          position: absolute;
+          top: 0.73em;
+          border-top: 3px solid #fff;
+      }
+
+      &:before { right: 100%; }
+      &:after { left: 100%; }
+  }
+
+    // &::after{
+    //   content: "";
+    //   height: 2px;
+    //   width: 1000px;
+    //   background: #fff;
+    //   position: absolute;
+    //   top: 50%;
+    //   transform: translateY(-50%);
+    //   margin-left: 24px;
+    // }
+    // &::before{
+    //   content: "";
+    //   height: 2px;
+    //   width: 500px;
+    //   background: #fff;
+    //   position: absolute;
+    //   top: 50%;
+    //   left: -100%;
+    //   transform: translateY(-50%);
+    //   margin-left: 24px;
+    // }
+    // .spacer:after {
+    //   display:inline-block;
+    //   width:100%;
+    //   content:".";
+    //   font-size:0;
+    //   color:transparent;
+    //   height:2px;
+    //   background:#000;
+    //   vertical-align:middle;
+    //   position:relative;
+    //   top:-1px;
+    // }
+  }
+
+  .text-center, .cammera-img{
+  }
+  .cammera-img{
+    // transform: rotate(10deg);
+    transform-origin: center;
+    width: 45%;
+    position: relative;
+  }
+  .text-center{
+    width: 55%;
+    padding-right: 40px;
+    // transform: s(10deg);
+    transform: skewY(-10deg);
+    // z-index: 2;
+  }
+  .view-price{
+    text-align: right;
+
+    a{
+
+      font-size: 25px;
+      line-height: 1;
+      text-transform: uppercase;
+      color: #ffffff;
+      font-weight: bold;
+      // font-style: italic;
+      font-family: "Gotham";
+      background-color: #ff0000;
+      text-align: right;
+      padding: 8px 16px;
+      display: inline-block;
+    }
+
+  }
+}
+.blue{
+  background-color: #ffffff;
+  background-image: url('./../../img/bg/background1.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.one-page-second-page{
+  background-color: #ffffff;
+  background-image: url('./../../img/bg/background2.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  .container{
+    height: 100%;
+  }
+  .di-flex{
+    align-items: center;
+    height: 100%;
+    .image-box{
+      width: 40%;
+      padding: 24px;
+      img{
+        transform: rotate(-10deg);
+      }
+    }
+    .text-content{
+      width: 60%;
+      padding: 24px;
+    }
+    .text-content{
+      h2{
+        font-size: 62px;
+        letter-spacing: 1px;
+        line-height: 46px;
+        text-transform: uppercase;
+        color: #ffffff;
+        font-style: italic;
+        font-family: "Gotham";
+        margin-bottom: 24px;
+      }
+      p{
+        line-height: 1;
+        margin-bottom: 24px;
+        span{
+          font-size: 22px;
+          // line-height: 0;
+          color: #ffffff;
+          font-weight: 300;
+          font-family: "Gotham";
+          margin-bottom: 24px;
+          background-color: #000;
+        }
+      } 
+    }
+  }
+}
+.one-page-third-page{
+  background-color: #ffffff;
+  background-image: url('./../../img/bg/backgrond3.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  .di-flex{
+    width: 56%;
+  }
+  .pata-nahi{
+    position: absolute;
+    right: 30%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+  }
+  .title{
+    font-size: 62px;
+    letter-spacing: 1px;
+    line-height: 1;
+    text-transform: uppercase;
+    color: #ffffff;
+    font-style: italic;
+    font-family: "Gotham";
+    margin-bottom: 32px;
+    margin-top: 160px;
+  }
+  p{
+    line-height: 1.4;
+    margin-bottom: 24px;
+    span{
+      font-size: 1.2rem;
+      // line-height: 1.5;
+      color: #ffffff;
+      font-weight: 300;
+      font-family: "Gotham";
+      margin-bottom: 24px;
+      background-color: #000;
+      padding: 4px 0;
+      // word-spacing:6px;
+    }
+  }
+}
+
+.black-bg{
+  background-color: #000;
+  width: 100%;
+}
+.red-bg{
+  background-color: red;
+  background-image: url('./../../../img/canon-bird.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.owl-container{
+  display: flex;
+  align-items: center;
+  height: 100%;
+}
+// popup ka code
+#popup1{
+  // background-color: red;
+  height: 100%;
+  width: 100%;
+  .video-tag{
+    width: 100%;
+    height: 100%;
   }
 }
