--- a/src/css/scss/base/_fonts.scss
+++ b/src/css/scss/base/_fonts.scss
@@ -3,5 +3,150 @@
 // -----------------------------------------------------------------------------
 // @import url('https://fonts.googleapis.com/css2?family=Aclonica&family=Oswald:wght@600&family=Poppins:wght@500;600;700;800;900&display=swap');
 // @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap');
-@import url('http://fonts.cdnfonts.com/css/gotham');
-                
+// @import url('http://fonts.cdnfonts.com/css/gotham');
+// font-family: 'MyWebFont';
+//   src:  url('myfont.woff2') format('woff2'),
+//         url('myfont.woff') format('woff');
+
+// @font-face {
+//   font-family: 'gotham';
+//   src: url('webfont.eot'); /* IE9 Compat Modes */
+//   src: url('./../../../assets/vendors/webfonts/'); /* IE9 Compat Modes */
+//   src: url('webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+//        url('webfont.woff2') format('woff2'), /* Super Modern Browsers */
+//        url('webfont.woff') format('woff'), /* Pretty Modern Browsers */
+//        url('webfont.ttf')  format('truetype'), /* Safari, Android, iOS */
+//        url('webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
+// }
+@font-face {
+  font-family: gotham;
+  font-style: normal;
+  font-weight: 400;
+  src: local("Gotham"),
+    url(https://fonts.cdnfonts.com/s/14898/GothamBook.woff) format("woff");
+}
+@font-face {
+  font-family: gotham;
+  font-style: italic;
+  font-weight: 400;
+  src: local("Gotham"),
+    url(https://fonts.cdnfonts.com/s/14898/GothamBookItalic.woff) format("woff");
+}
+@font-face {
+  font-family: gotham;
+  font-style: normal;
+  font-weight: 300;
+  src: local("Gotham"),
+    url(https://fonts.cdnfonts.com/s/14898/GothamLight.woff) format("woff");
+}
+@font-face {
+  font-family: gotham;
+  font-style: italic;
+  font-weight: 300;
+  src: local("Gotham"),
+    url(https://fonts.cdnfonts.com/s/14898/GothamLightItalic.woff)
+      format("woff");
+}
+@font-face {
+  font-family: gotham;
+  font-style: normal;
+  font-weight: 500;
+  src: local("Gotham"),
+    url(https://fonts.cdnfonts.com/s/14898/GothamMedium.woff) format("woff");
+}
+@font-face {
+  font-family: gotham;
+  font-style: normal;
+  font-weight: 500;
+  src: local("Gotham"),
+    url(https://fonts.cdnfonts.com/s/14898/GothamMedium_1.woff) format("woff");
+}
+@font-face {
+  font-family: gotham;
+  font-style: italic;
+  font-weight: 500;
+  src: local("Gotham"),
+    url(https://fonts.cdnfonts.com/s/14898/GothamMediumItalic.woff)
+      format("woff");
+}
+@font-face {
+  font-family: gotham;
+  font-style: normal;
+  font-weight: 700;
+  src: local("Gotham"),
+    url(https://fonts.cdnfonts.com/s/14898/GothamBold.woff) format("woff");
+}
+@font-face {
+  font-family: gotham;
+  font-style: normal;
+  font-weight: 700;
+  src: local("Gotham"),
+    url(https://fonts.cdnfonts.com/s/14898/Gotham-Bold.woff) format("woff");
+}
+@font-face {
+  font-family: gotham;
+  font-style: italic;
+  font-weight: 700;
+  src: local("Gotham"),
+    url(https://fonts.cdnfonts.com/s/14898/GothamBoldItalic.woff) format("woff");
+}
+@font-face {
+  font-family: gotham black;
+  font-style: normal;
+  font-weight: 500;
+  src: local("Gotham Black"),
+    url(https://fonts.cdnfonts.com/s/14898/Gotham-Black.woff) format("woff");
+}
+@font-face {
+  font-family: gotham light;
+  font-style: normal;
+  font-weight: 500;
+  src: local("Gotham Light"),
+    url(https://fonts.cdnfonts.com/s/14898/Gotham-Light.woff) format("woff");
+}
+@font-face {
+  font-family: gotham thin;
+  font-style: normal;
+  font-weight: 500;
+  src: local("Gotham Thin"),
+    url(https://fonts.cdnfonts.com/s/14898/Gotham-Thin.woff) format("woff");
+}
+@font-face {
+  font-family: gotham xlight;
+  font-style: normal;
+  font-weight: 500;
+  src: local("Gotham XLight"),
+    url(https://fonts.cdnfonts.com/s/14898/Gotham-XLight.woff) format("woff");
+}
+@font-face {
+  font-family: gotham book;
+  font-style: italic;
+  font-weight: 500;
+  src: local("Gotham Book"),
+    url(https://fonts.cdnfonts.com/s/14898/Gotham-BookItalic.woff)
+      format("woff");
+}
+@font-face {
+  font-family: gotham thin;
+  font-style: italic;
+  font-weight: 500;
+  src: local("Gotham Thin"),
+    url(https://fonts.cdnfonts.com/s/14898/Gotham-ThinItalic.woff)
+      format("woff");
+}
+@font-face {
+  font-family: gotham ultra;
+  font-style: italic;
+  font-weight: 500;
+  src: local("Gotham Ultra"),
+    url(https://fonts.cdnfonts.com/s/14898/Gotham-UltraItalic.woff)
+      format("woff");
+}
+@font-face {
+  font-family: gotham xlight;
+  font-style: italic;
+  font-weight: 500;
+  src: local("Gotham XLight"),
+    url(https://fonts.cdnfonts.com/s/14898/Gotham-XLightItalic.woff)
+      format("woff");
+}
