--- a/src/css/scss/pages/_home.scss
+++ b/src/css/scss/pages/_home.scss
@@ -37,19 +37,26 @@ body {
 }
 
 .bottom-container{
-  position: absolute;
+  position: fixed;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   justify-content: end;
   align-items: center;
-  z-index: 9999;
+  z-index: 9;
   bottom: 0;
   right: 0;
   padding: 3% 5%;
   width: 100%;
+  // &.pos-arrow-abs{
+  //   position: absolute;
+  //   z-index: 9999;
+
+  // }
   .progerss-input{
     width: 60%;
+    // margin-right: 100px;
+    // margin-bottom: 24px;
   }
   progress {
     border: none;
@@ -149,15 +156,21 @@ body {
   top: 0;
   left: 0;
 }
-.position-abs{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  z-index: 1;
-  max-width: 1200px;
-  transform-origin: center;
-
+.one-page-first-page{
+  // position: absolute;
+  // top: 50%;
+  // left: 50%;
+  // transform: translate(-50%,-50%);
+  // z-index: 1;
+  // max-width: 1200px;
+  // transform-origin: center;
+    .container{
+      height: 100%;
+    }
+    .di-flex{
+      height: 100%;
+      align-items: center;
+    }
   p, h1{
     color: #fff;
     // text-align: center;
@@ -208,12 +221,7 @@ body {
     }
   } 
   h1 {
-    // font-size: 100px;
-    // color: #ffffff;
-    // font-weight: 800;
     overflow: hidden;
-    // overflow-x: visible;
-    // line-height: 1;
     position: relative;
     text-align: right;
     span {
@@ -232,17 +240,6 @@ body {
       font-family: "Gotham Ultra";
       font-weight: bold;
       padding: 0 12px;
-
-    // overflow-x: visible;
-
-      // white-space: nowrap;
-      // rotate(-10deg)
-      // transform: rotate(5deg);
-      // overflow: hidden;
-      // z-index: 2;
-      // position: relative;
-      // top: 0;
-      // left: 0;
   }
     // span {
     //   display: block;
@@ -415,6 +412,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  
   .di-flex{
     width: 56%;
   }
@@ -458,7 +456,7 @@ body {
 }
 .red-bg{
   background-color: red;
-  background-image: url('./../../../img/canon-bird.jpg');
+  background-image: url('./../../img/bg/background2.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -467,14 +465,232 @@ body {
   display: flex;
   align-items: center;
   height: 100%;
+  width: 100%;
 }
 // popup ka code
+#panels{
+  overflow: hidden;
+}
 #popup1{
   // background-color: red;
   height: 100%;
   width: 100%;
+  margin: 0;
+  .popup_close{
+    position: absolute;
+    bottom: 32px;
+    right: 32px;
+    width: 74px;
+    height: 74px;
+    border-radius: 37px;
+    background-color: #ffffff;
+    font-size: 32px;
+    border: none;
+  }
   .video-tag{
     width: 100%;
+    height: 98%;
+    object-fit: cover;
+  }
+}
+#popup1 {
+  transform: scale(6);
+}
+.popup_visible #popup1 {
+  transform: scale(1);
+}
+
+.horse-bg{
+  background-color: red;
+  background-image: url('./../../img/bg/horse.jpg'); 
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  padding: 160px 0 0 0;
+  .title{
+    margin: 0;
+    font-size: 42px;
+    font-weight: 700;
+    font-family: gotham;
+    // font-family: g;
+  }
+  .title-new{
+    display: inline-block;
+    background-image: linear-gradient(-90deg, #12d6df 0%, #12d6df 36%, #f70fff 57%, #f70fff 100%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    margin: 0;
+    // font-size: 100px;
+    // letter-spacing: 2px;
+    // line-height: 1;
+    // text-transform: uppercase;
+    // font-style: italic;
+    // font-family: "Gotham Ultra";
+    // font-weight: bold;
+    // padding: 0 12px;
+  }
+  p{
+    margin: 32px 0;
+    font-size: 18px;
+    line-height: 1.2;
+    color: #ffffff;
+    font-weight: 300;
+    font-family: "Gotham";
+    .blue-color{
+      display: inline;
+      background-image: linear-gradient(-90deg, #12d6df 0%, #12d6df 36%, #f70fff 57%, #f70fff 100%);
+      -webkit-background-clip: text;
+      background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+  }
+  .img-info{
+    position: absolute;
+    right: 64px;
+    bottom: 120px;
+    // width: 100px;
+    img{
+      margin-left: 0;
+      margin-bottom: 16px;
+      width: auto;
+      height: 40px !important;
+    }
+  }
+}
+.girl-bg{
+  background-image: url('./../../img/bg/girl.jpg'); 
+}
+
+.water-img{
+  background-image: url('./../../img/bg/in-water.jpg'); 
+  .container{
+    height: 100%;
+  }
+  .di-flex{
+    justify-content: flex-end;
+    width: 100%;
+    align-items: center;
+    height: 100%;
+
+  }
+  .rt-section{
+    width: 50%;
+  }
+  .title{
+    display: inline;
+    background-image: linear-gradient(-90deg, #12d6df 0%, #12d6df 36%, #f70fff 57%, #f70fff 100%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+      
+    font-size: 40px;
+
+    .text-small{
+      
+      display: inline-flex;
+      flex-direction: column;
+      align-items: center;
+      vertical-align: middle;
+      .text-16{
+        font-size: 16px;
+        line-height: 1;
+        text-transform: uppercase;
+        color: #00f4ff;
+        font-weight: 300;
+        font-style: italic;
+        font-family: "Gotham";
+      }
+    }
+  }
+  p{
+    font-size: 20px;
+    line-height: 1;
+    color: #ffffff;
+    font-weight: 300;
+    font-family: "Gotham";
+  }
+  .pata-nahi{
+    left: 0%;
+
+  }
+  .img-info-water{
+    display: flex;
+    img{
+      margin: 0;
+      margin-right: 8px;
+      height: 30px !important;
+    }
+  }
+  .bottom-text{
+    font-size: 13px;
+    letter-spacing: 1px;
+    line-height: 15px;
+    color: #ffffff;
+    font-weight: 300;
+    font-family: "Gotham";
+    align-self: flex-end;
+    margin-top: 40px;
+    a{
+      color: red;
+    }
+  }
+
+}
+.girl-2-bg{
+  background-image: url('./../../img/bg/girl-2.jpg');
+  .text-center{
+    width: 100%;
+  }
+  .img-info-water{
+    margin-top: 40px;
+    justify-content: center;
+    .icon{
+      width : 44%;
+      max-width: 160px;
+      margin: 3%;
+      img{
+        margin: 0 auto;
+        height: auto !important;
+      }
+      // height: 60px !important;
+      
+    }
+  }
+  h2 {
+    overflow: hidden;
+    position: relative;
+    text-align: right;
+    span {
+      display: inline-block;
+      transform: translateY(-100%);
+      background-image: linear-gradient(-90deg, #12d6df 0%, #12d6df 36%, #f70fff 57%, #f70fff 100%);
+      -webkit-background-clip: text;
+      background-clip: text;
+	    -webkit-text-fill-color: transparent;
+      font-size: 90px;
+      letter-spacing: 2px;
+      line-height: 1;
+      text-transform: uppercase;
+      color: #ff0000;
+      font-style: italic;
+      font-family: "Gotham Ultra";
+      font-weight: bold;
+      padding: 0 12px;
+  }
+    // span {
+    //   display: block;
+    //   overflow: hidden;
+    // }
+  }
+}
+.last-bg{
+  background-color:#000;
+  background-image: url('./../../img/bg/last.jpg'); 
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  .container, .di-flex{
     height: 100%;
   }
 }
