--- a/src/css/scss/pages/_home.scss
+++ b/src/css/scss/pages/_home.scss
@@ -33,7 +33,7 @@ body {
   width: calc(100% - 140px);
   left: 50%;
   transform: translateX(-50%);
-  padding: 60px 0;
+  padding: 60px 0 0 0;
 }
 
 .bottom-container{
@@ -692,5 +692,89 @@ body {
   background-position: center;
   .container, .di-flex{
     height: 100%;
+    align-items: center;
+
+  }
+  .img-box{
+    width: 30%;
+  }
+  .text-box{
+    width: 50%;
+    padding: 0 40px;
+  }
+  .text-box{
+    img{
+      margin: 0;
+      margin-bottom: 24px;
+    }
+    p{
+      line-height: 1.4;
+      margin-bottom: 24px;
+      span{
+        font-size: 1.2rem;
+        color: #fff;
+        font-weight: 300;
+        font-family: Gotham;
+        margin-bottom: 24px;
+        background-color: #000;
+        padding: 4px 0;
+      }
+    }
+    .color-red{
+      color: #fe0000;
+      &.bold{
+        font-weight: 800;
+      }
+      //
+    }
+  }
+}
+
+@media (max-width: 1199.98px) { 
+  .one-page-first-page h1 span{
+    font-size: 64px;
+  }
+  .one-page-first-page .border {
+    font-size: 36px;
+  }
+  .one-page-second-page .di-flex .text-content h2 {
+    font-size: 32px;
+  }
+  .one-page-second-page .di-flex .text-content p span {
+    font-size: 18px;
+  }
+  .one-page-third-page .title {
+    font-size: 36px;
+  }
+  .one-page-third-page p span {
+    font-size: 14px;
+    padding: 8px 0;
+  }
+  .one-page-third-page .title {
+    font-size: 24px;
+  }
+  .horse-bg p {
+    margin: 16px 0;
+    font-size: 14px;
+  }
+  .water-img p {
+    font-size: 14px;
+  }
+  .girl-2-bg h2 span {
+    font-size: 48px;
+  }
+  .one-page-first-page .anim2 span {
+    font-size: 32px;
+  }
+  .girl-2-bg .img-info-water .icon {
+    max-width: 126px;
+    margin: 1% 3%;
+  }
+  .last-bg .text-box p span {
+    font-size: 14px;
+    padding: 7px 0;
+  }
+  .last-bg .text-box img{
+    width: 260px;
   }
 }
