change the page animation

--- a/src/css/scss/pages/_home.scss
+++ b/src/css/scss/pages/_home.scss
@@ -84,12 +84,12 @@ body {
 
 
 #panels #panels-container {
-  height: 100vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: nowrap;
-  flex-wrap: nowrap;
+  // height: 100vh;
+  // display: -webkit-box;
+  // display: -ms-flexbox;
+  // display: flex;
+  // -ms-flex-wrap: nowrap;
+  // flex-wrap: nowrap;
   padding: 0;
   overflow: hidden;
   background-color: #ddd;
